--- a/app/views/portal/index.html.erb
+++ b/app/views/portal/index.html.erb
@@ -1,7 +1,7 @@
 <ul>
   <% if user_signed_in? %>
     <li>Hi, user</li>
-    <li>Sign Out</li>
+    <%= button_to "Log out", destroy_user_session_path , method: :delete %>
   <% else %>
     <li>Sign In</li>
     <li>Sign Up</li>
